<resources>
    <string name="app_name">LoginUI</string>
    <string name="yourapp">YourApp</string>
    <string name="tag_line">tag line</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>
